--- a/app/css/_owlcarousel.scss
+++ b/app/css/_owlcarousel.scss
@@ -5,6 +5,7 @@
     color: $btn--color;
     cursor: pointer;
     font-size: 18px;
+    border-radius: $btn--radius;
     height: $btn-owl-height;
     width: $btn-owl-width;
     z-index: 100;
