--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -2,18 +2,18 @@
 $global-font-family:      "Montserrat", Verdana, Tahoma, sans-serif; // Шрифт всего сайта
 $global-font-size:        16px; // Размер шрифта всего сайта
 $global-bgd-color:        #fff; // Цвет фона
-$global-text-color:       #2a2a2a; // Цвет текста
+$global-text-color:       #272727; // Цвет текста
 $global-shade-color:      #dbdbdb; // Цвет оттенок
 $global-link-color:       #0b1875; // Цвет ссылок
-$global-link-hover:       #2a2a2a; // Hover ссылок
+$global-link-hover:       #272727; // Hover ссылок
 $global-bg-background:    #474747;  //#0b1875 Заливка цветов
-$global-bg-opacity:       rgba(71, 71, 71, 0.55);  // rgba(71, 71, 71, 0.55)  Прозрачность слайдера - hover
-$global-bg-respnav:       rgba(71, 71, 71, 0.85);  // Заливка responsive nav
+$global-bg-opacity:       rgba(79, 79, 79, 0.45);  // rgba(71, 71, 71, 0.55)  Прозрачность слайдера - hover
+$global-bg-respnav:       rgba(71, 71, 71, 0.95);  // Заливка responsive nav
 $global-nav-fixed-bg:     #f6f6f6; // Цвет фона nav-fixed
 $global-footer-bg:        #474747; // Заливка футера
-$global-box-shadow-45:    0px 0px 15px 0px rgba(123, 123, 123, 0.45); // box-shadow 45%
-$global-box-shadow-25:    0px 0px 15px 0px rgba(123, 123, 123, 0.25); // box-shadow 25%
-$global-box-shadow-15:    0px 0px 15px 0px rgba(123, 123, 123, 0.15); // box-shadow 25%
+$global-box-shadow-45:    0px 0px 15px 0px rgba(180, 175, 175, 0.45); // box-shadow 45%
+$global-box-shadow-25:    0px 0px 15px 0px rgba(180, 175, 175, 0.25); // box-shadow 25%
+$global-box-shadow-15:    0px 0px 15px 0px rgba(180, 175, 175, 0.15); // box-shadow 15%
 
 $global-font-weight: 400; // font-weight всего текста
 $headig-font-weight: 600; // H1 - H6 заголовки
@@ -31,12 +31,12 @@ $reveal-error:  #f00f0f;
 
 // buttons
 $btn--color: #fff;
-$btn--font-weigh: 400;
+$btn--font-weigh: 500;
 $btn--width-60: 60%;
 $btn--width-90: 90%;
 $btn--width-100: 100%;
 $btn--transition: background 350ms ease-in-out, border-color 350ms ease-in-out, color 150ms ease-in-out;
-$btn--radius: 0;
+$btn--radius: 6px;
 
 // colors
 $color--orange: #ff8400;
@@ -49,10 +49,10 @@ $color--white:  transparent;
 $path-link-color:  #fff;
 $path-link-hover:  #fff;
 
-$color--orange--hover: #262626;
-$color--yellow--hover: #262626;
-$color--green--hover:  #262626;
-$color--grey--hover:   #262626;
+$color--orange--hover: #272727;
+$color--yellow--hover: #272727;
+$color--green--hover:  #272727;
+$color--grey--hover:   #272727;
 
 // owlcarousel
 $btn-owl-width:  40px;
