--- a/app/template/_company.html
+++ b/app/template/_company.html
@@ -1,10 +1,10 @@
-<div class="wrapper">
+<div class="1wrapper">
     <div class="padding__tb__40">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section__title">
-                        <h1>«Maxisolar»: cолнечные электростанции</h1>
+                        <h1>MaxiSolar: cолнечные электростанции</h1>
                         <div class="section__separator">
                             <p>Строительство солнечных электростанций любой сложности и мощности «под ключ»</p>
                         </div>
@@ -14,24 +14,24 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-6 col-lg-6">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-sm-6 col-md-6 col-lg-6">
                             <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".3s"><span>7 лет</span> успешной работы</div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-sm-6 col-md-6 col-lg-6">
                             <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".2s"><span>> 80</span> выполненных объектов </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-sm-6 col-md-6 col-lg-6">
                             <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".8s"><span>4500 кВт</span> построенных солнечных электростанций</div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-sm-6 col-md-6 col-lg-6">
                             <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".6s"><span>100%</span> довольных клиентов </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <p>Компания «Maxisolar» специализируется на комплектации и строительстве солнечных электростанций любой сложности и мощности на различных объектах, а также мы оказываем полный комплекс услуг и работ в сфере электроснабжения и электромонтажа любых объектов частной, коммунальной и коммерческой инфраструктуры.</p>
+                <div class="col-md-6 col-lg-6">
+                    <p>Компания Maxisolar специализируется на комплектации и строительстве солнечных электростанций любой сложности и мощности на различных объектах, а также мы оказываем полный комплекс услуг и работ в сфере электроснабжения и электромонтажа любых объектов частной, коммунальной и коммерческой инфраструктуры.</p>
                     <p>Наша команда эффективно и профессионально работает с клиентами на всех этапах взаимодействия – от консультации и подготовки проекта до ввода объекта в эксплуатацию с оформление всех необходимых документов и последующим сервисным обслуживанием.</p>
                 </div>
             </div>
