--- a/app/template/_etaps.html
+++ b/app/template/_etaps.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section__title">
-                    <h5>Этапы строительства солнечной электростанции</h5>
+                    <h5>Схема работы с нашей компанией</h5>
                     <div class="section__separator">
-                        <p>Процесс работы с нашей компанией можно разделить на несколько этапов</p>
+                        <p>Мы работаем по простой и прозрачной схеме</p>
                     </div>
                 </div>
             </div>
@@ -13,25 +13,32 @@
     </div>
     <div class="container-full">
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 center wow fadeInLeftBig" data-wow-duration="2.5s" data-wow-delay=".1s">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center">
                 <div class="stages__coop">
-                <ul>
-                    <li><div><span>1</span><img src="/images/et1.png"></div> <strong>Заявка</strong> Вы оставляете <a data-reveal-id="zvonok" title="Оставить заявку">заявку на сайте</a> или звоните по телефону</li>
-                    <li><div><span>2</span><img src="/images/et2.png"></div> <strong>Выезд</strong> Бесплатный выезд на объект. Замеряем и консультируем </li>
-                    <li><div><span>3</span><img src="/images/et3.png"></div> <strong>Предложение</strong> Коммерческое предложение с несколькими вариантами</li>
-                    <li><div><span>4</span><img src="/images/et4.png"></div> <strong>Договор</strong> Согласование и заключение договора с клиентом</li>
-                    <li><div><span>5</span><img src="/images/et5.png"></div> <strong>Проект</strong> Разработка проекта и технической документации</li>
-                    <li><div><span>6</span><img src="/images/et6.png"></div> <strong>Монтаж</strong> Выполняем монтажные работы и подключение</li>
-                    <li><div><span>7</span><img src="/images/et7.png"></div> <strong>Зеленый тариф</strong> Подключаем <a href="/zelenyi-tarif.htm" title="Зеленый тариф">Зеленый тариф</a>, передаем пакет документации</li>
-                    <li><div><span>8</span><img src="/images/et8.png"></div> <strong>Обслуживание</strong> Дальнейшее сервисное и гарантийное обслуживание</li>
-                </ul>
-            </div>
+                    
+                    <ul class="wow fadeInLeftBig line__first" data-wow-duration="2.5s" data-wow-delay=".5s">
+                        <li class="arrow__right"><div><span>1</span><img src="/images/et1.png"></div> <strong>Заявка</strong> Вы оставляете <a data-reveal-id="zvonok" title="Оставить заявку">заявку на сайте</a> или звоните по телефону</li>
+                        <li class="arrow__right"><div><span>2</span><img src="/images/et2.png"></div> <strong>Бесплатный выезд</strong> Бесплатный выезд на объект для замера и консультации</li>
+                        <li class="arrow__right"><div><span>3</span><img src="/images/et3.png"></div> <strong>Предложение</strong> Коммерческое предложение с несколькими вариантами</li>
+                        <li class="arrow__right"><div><span>4</span><img src="/images/et4.png"></div> <strong>Договор</strong> Согласование и заключение договора с клиентом</li>
+                    </ul>
+                    
+                    <div class="line__arrow wow fadeInRightBig" data-wow-duration="2.5s" data-wow-delay="1.5s"></div>
+                    
+                    <ul class="wow fadeInRightBig line__twoo" data-wow-duration="2.5s" data-wow-delay="3.5s">
+                        <li class="arrow__left arrow__twoo"><div><span>5</span><img src="/images/et5.png"></div> <strong>Проект</strong> Разработка проекта и технической документации</li>
+                        <li class="arrow__right"><div><span>6</span><img src="/images/et6.png"></div> <strong>Монтаж</strong> Выполняем монтажные работы и подключение</li>
+                        <li class="arrow__right"><div><span>7</span><img src="/images/et7.png"></div> <strong>Зеленый тариф</strong> Подключаем <a href="/zelenyi-tarif.htm" title="Зеленый тариф">Зеленый тариф</a>, передаем пакет документации</li>
+                        <li><div><span>8</span><img src="/images/et8.png"></div> <strong>Обслуживание</strong> Дальнейшее сервисное и гарантийное обслуживание</li>
+                    </ul>
+                
+                </div>
             </div>
         </div>
         <div class="row">
-			<div class="col-lg-12 grew__backround center wow fadeInRightBig" data-wow-duration="2s" data-wow-delay="1s">
-				<ul class="footer-social">	
-					<li>Остались вопросы? Напиши нам в мессенджер: </li>
+			<div class="col-xs-12 col-lg-12 grew__backround center wow fadeInRightBig" data-wow-duration="2s" data-wow-delay="4.5s">
+				<ul class="footer__social">	
+					<li>Задайте вопрос </li>
 					<li><a class="facebook" title="Facebook" target="_blank" href="https://www.facebook.com/"><img src="/images/social_icon/facebook.svg"></a></li>
 					<li class="hidden-xs"><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>
 					<li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>				
