--- a/app/template/_footer.html
+++ b/app/template/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+			<div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
 				<p class="title__information">О компании</p>
 				<div class="footer__menu">
 					<ul>
@@ -13,7 +13,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+			<div class="col-xs-12 col-sm-8 col-md-5 col-lg-5">
 				<p class="title__information">Наши услуги</p>
 				<div class="footer__menu">
 					<ul>
@@ -25,7 +25,7 @@
 					</ul>	
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<div class="sm-center col-xs-12 col-sm-12 col-md-4 col-lg-4">
 				<p class="title__information">Контактная информация</p>
 				<p class="information"><span class="lnr lnr-map-marker"></span> г. Днепр, ул. Б. Хмельницкого, 4</p>		
 				<p class="information"><span class="lnr lnr-phone-handset"></span> Менеджер:  <a title="Позвонить" href="tel:+">+38 (097) 424-79-22</a></p>
@@ -37,7 +37,7 @@
 		<div class="row">
 			<div class="col-lg-12 center">
 				<ul class="footer__social">	
-					<li>Задайте вопрос в мессенджере: </li>
+					<li>Задайте вопрос </li>
 					<li><a class="facebook" title="Facebook" target="_blank" href="https://www.facebook.com/"><img src="/images/social_icon/facebook.svg"></a></li>
 					<li class="hidden-xs"><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>
 					<li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img src="/images/social_icon/viber.svg"></a></li>
@@ -121,7 +121,7 @@
 		boxClass: 'wow',
 		animateClass: 'animated',
 		offset: 0,
-		mobile: true,
+		mobile: false,
 		live: true
 	})
 	wow.init();
