--- a/app/template/_header.html
+++ b/app/template/_header.html
@@ -1,21 +1,60 @@
 <header>
-    <div class="header__line">
-        <div class="container-full">
+    <div class="header__navigation">
+        <div class="container">
             <div class="row">
-                <div class="col-md-12 col-lg-12 center">
-                    <span class="left">«Maxisolar»: cолнечные электростанции</span>
-                    <ul class="header__contacts">
-                        <li class="hidden-md"><span class="lnr lnr-map-marker"></span> г. Днепр, ул. Б. Хмельницкого, 4</li>
+                <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                    <div class="logo">
+                        <a href="/" title="Солнечные электростанции: компания «Maxisolar»">
+                            <img src="/images/logo.png" alt="Солнечные электростанции: компания «Maxisolar»">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-xs-push-3 col-sm-8 col-md-8 col-lg-8 col-sm-push-0 col-md-push-0 col-lg-push-0">
+                    <ul class="hidden-xs hidden-sm hidden-md header__contacts">
                         <li><span class="lnr lnr-phone-handset"></span> +38 (097) 424-79-22</li>
                         <li><span class="lnr lnr-phone-handset"></span> +38 (099) 977-15-47</li>
                     </ul>
-                    <ul class="header__social">	
-                        <li><a title="Facebook" target="_blank" href="https://www.facebook.com/"><img width="24px" src="/images/social_icon/facebook.svg"></a></li>
-                        <li class="hidden-xs"><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="/images/social_icon/viber.svg"></a></li>
-                        <li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="/images/social_icon/viber.svg"></a></li>                   
-                        <li><a title="Instagram" target="_blank" href="https://www.instagram.com/"><img width="24px" src="/images/social_icon/instagram.svg"></a></li>
-                        <li><a href="https://t.me/maxisolar" class="telegram" title="Telegram" target="_blank"><img width="24px" src="/images/social_icon/telegram.svg"></a></li>
+                    <ul class="hidden-xs hidden-sm header__social">	
+                        <li><a title="Facebook" target="_blank" href="https://www.facebook.com/"><img width="28px" src="/images/social_icon/facebook.svg"></a></li>
+                        <li class="hidden-xs"><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img width="28px" src="/images/social_icon/viber.svg"></a></li>
+                        <li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img width="28px" src="/images/social_icon/viber.svg"></a></li>                   
+                        <li><a title="Instagram" target="_blank" href="https://www.instagram.com/"><img width="28px" src="/images/social_icon/instagram.svg"></a></li>
+                        <li><a href="https://t.me/maxisolar" class="telegram" title="Telegram" target="_blank"><img width="28px" src="/images/social_icon/telegram.svg"></a></li>
                     </ul>
+                    <a data-reveal-id="zvonok" title="Обратный звонок" class="hidden-xs btn b-small orange-color"><span class="lnr lnr-phone-handset"></span> Обратный звонок</a> 
+                    <nav class="navigation">
+                        <div class="nav__mobile">
+                           <a class="navbar__open"><span></span> <i>Навигация</i></a>
+                        </div>
+                        <ul class="navigation__mobile">
+                            <li>
+                                <a href="/serv.htm" title="О компании">О компании</a>
+                            </li>
+                            <li class="dropdown">
+                                <a class="dropdown-link" href="/serv.htm" title="Наши услуги">Услуги</a>
+                                <ul>
+                                    <li><a href="#" title="Сервис и обслуживание">Частные солнечные электростанции</a></li>
+                                    <li><a href="#" title="Сервис и обслуживание">Коммерческие солнечные электростанции</a></li>
+                                    <li><a href="#" title="Сервис и обслуживание">Системы автономного и резервного электроснабжения</a></li>
+                                    <li><a href="#" title="Сервис и обслуживание">Электромонтажные работы</a></li>
+                                    <li><a href="#" title="Сервис и обслуживание">Сервис и обслуживание</a></li>
+                                    <li><a href="#" title="Сервис и обслуживание">Вопрос / ответ</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/serv.htm" title="Зеленый тариф">Зеленый тариф</a>
+                            </li>
+                            <li>
+                                <a href="/serv.htm" title="Наши проекты">Наши проекты</a>
+                            </li>
+                            <li>
+                                <a href="/serv.htm" title="Контакты">Контакты</a>
+                            </li>
+                            <a class="navbar__close"><span></span></a>
+                        </ul>
+                    </nav>
+                </div>   
+                <div class="col-xs-3 col-xs-pull-3 col-sm-1 col-md-1 col-lg-1 col-sm-pull-0 col-md-pull-0 col-lg-pull-0">
                     <ul class="header__language">
                         <li>
                             <a class="selected" title="Русский">RU</a>
@@ -24,51 +63,6 @@
                             <a href="/ua/" title="Українською">UA</a>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="header__navigation">
-        <div class="container-full">
-            <div class="row">
-                <div class="logo">
-                    <a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-                         <img src="/images/logo.png" alt="Солнечные электростанции: компания «Maxisolar»">
-                    </a>
-                </div> 
-                <nav class="navigation">
-                    <div class="nav__mobile">
-                       <a class="navbar__open"><span></span> <i>Навигация</i></a>
-                    </div>
-                    <ul class="navigation__mobile">
-                        <li>
-                            <a class="dropdown-link" href="#" title="О компании">О компании</a>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-link" href="#" title="Наши услуги">Услуги</a>
-                            <ul>
-                                <li><a href="#" title="Сервис и обслуживание">Частные солнечные электростанции</a></li>
-                                <li><a href="#" title="Сервис и обслуживание">Коммерческие солнечные электростанции</a></li>
-                                <li><a href="#" title="Сервис и обслуживание">Системы автономного и резервного электроснабжения</a></li>
-                                <li><a href="#" title="Сервис и обслуживание">Электромонтажные работы</a></li>
-                                <li><a href="#" title="Сервис и обслуживание">Сервис и обслуживание</a></li>
-                                <li><a href="#" title="Сервис и обслуживание">Вопрос / ответ</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#" title="Зеленый тариф">Зеленый тариф</a>
-                        </li>
-                        <li>
-                            <a href="#" title="Наши проекты">Наши проекты</a>
-                        </li>
-                        <li>
-                            <a href="#" title="Контакты">Контакты</a>
-                        </li>
-                        <a class="navbar__close"><span></span></a>
-                    </ul>
-                </nav>
-                <div class="callback">
-                    <a data-reveal-id="zvonok" title="Обратный звонок" class="btn b-full b-small orange-color"><span class="lnr lnr-phone-handset"></span> Обратный звонок</a> 
                 </div>
             </div>
         </div>
