--- a/app/template/_projects.html
+++ b/app/template/_projects.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="title">
                             <a href="/" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                            <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
+                            <div class="description">Строительство сетевой солнечной электростанции 32 кВт. с. Куриловка</div>
                             <div class="date">24 Ноября, 2020</div>
                         </div>
                     </div>
