--- a/app/template/_slider.html
+++ b/app/template/_slider.html
@@ -9,7 +9,7 @@
 								<div class="title">Солнечные электростанции для дома, дачи, бизнеса</div>
 								<div class="description">Проектирование и строительство эффективных и надежных солнечных электростанций для любых объектов «Под ключ»</div>
 								<div class="link">
-									<a data-reveal-id="zvonok" class="btn b-large orange-color" title="Оставить заявку">Оставить заявку</a>
+									<a data-reveal-id="zvonok" class="btn btn b-large orange-color" title="Получить консультацию">Получить консультацию</a>
 									<a class="btn b-ml-10 b-large white-color" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
 								</div>
 							</div>						
@@ -27,7 +27,7 @@
 								<div class="title">Подключение, оформление «Зеленого» тарифа</div>
 								<div class="description">Специалисты нашей компании имеют большой и успешный опыт оформления «Зеленого» тарифа по всей территории Украины</div>
 								<div class="link">
-									<a data-reveal-id="zvonok" class="b-large orange-color" title="Оставить заявку">Оставить заявку</a>
+									<a data-reveal-id="zvonok" class="btn b-large orange-color" title="Получить консультацию">Получить консультацию</a>
 									<a class="btn b-ml-10 b-large white-color" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
 								</div>
 							</div>						
@@ -45,7 +45,7 @@
 								<div class="title">Cистемы автономного и резервного электроснабжения</div>
 								<div class="description">Проектирование и строительство систем для аварийного или автономного электроснабжения</div>
 								<div class="link">
-									<a data-reveal-id="zvonok" class="b-large orange-color" title="Оставить заявку">Оставить заявку</a>
+									<a data-reveal-id="zvonok" class="btn b-large orange-color" title="Получить консультацию">Получить консультацию</a>
 									<a class="btn b-ml-10 b-large white-color" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
 								</div>
 							</div>						
@@ -63,7 +63,7 @@
 								<div class="title">Выполняем электромонтажные работы «Под ключ»</div>
 								<div class="description">Полный спектр услуг и работ в сфере электроснабжения и электромонтажа любых объектов «Под ключ»</div>
 								<div class="link">
-									<a href="/" class="btn b-large orange-color" title="Подробнее">Подробнее</a>
+									<a href="/" class="btn btn b-large orange-color" title="Подробнее">Подробнее</a>
 								</div>
 							</div>						
 						</div>
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="owl__slider__controls container-full">
+	<div class="hidden-xs owl__slider__controls container-full">
 		<div class="slider_arrow slider_arrow_left"><span class="lnr lnr-chevron-left"></span></div>
 		<div class="slider_arrow slider_arrow_right"><span class="lnr lnr-chevron-right"></span></div>
 	</div>
