--- a/app/css/_social.scss
+++ b/app/css/_social.scss
@@ -9,7 +9,7 @@
     li {
         vertical-align: middle;
         display: inline-block;
-        margin: 0 5px;
+        margin: 0 2px;
 
         &:before {
             content: initial;
@@ -34,12 +34,12 @@
     display: inline-block;
     list-style-image: none;
     list-style: none;
-    margin: 0 0 0 30px;
+    margin: 0px 15px 0 5px;
     padding: 0;
 
     li {
         display: inline-block;
-        margin: 0 5px;
+        margin: 0 2px;
 
         &:before {
             content: initial;
