--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -1,292 +1,287 @@
-@media (max-width:1340px) and (min-width:1200px) {
-
-	.navigation {
-		margin: 20px 0px 0px 50px;
-	}
-	.header__navigation.fixed .navigation {
-		margin: 10px 0px 0px 50px;
-	}
-	.navigation li a {
-		display: inline-block;
-    	padding: 5px 12px 5px 12px;
-   		font-size: 16px;
-	}
+@media (max-width: 1280px) and (min-width: 1200px) {
 	
+	.stages__coop ul.line__twoo {
+		margin-left: 70px;
+	}
+
 }
 
-@media (max-width:800px) and (min-width:599px) {
+@media (max-width: 1200px) and (min-width: 991px) {
+
+	.b-large {
+		padding: 14px 32px;
+		font-size: 14px;
+	}
+	.b-60 {
+		width: 80%;
+	}
+	
+	/* header */
+	.header__language {
+		margin-top: 10px;
+	}
+	.header__social {
+		margin: 25px 40px 0 0;
+	}
+
+	/* slider */
+	.owl__slider__content {
+		margin: 180px 80px;
+	}
+
+	/* services */
+	.col__services .title a {
+		padding: 0px;
+	}
+
+	/* etaps */
+	.stages__coop li {
+		width: 210px;
+	}
+	.stages__coop li span {
+		left: 20px;
+	}
+	.stages__coop ul.line__twoo {
+		margin-left: 0px;
+	}
+}
+
+@media (max-width: 991px) and (min-width: 768px) {
+	
+	.b-large {
+		padding: 14px 32px;
+		font-size: 14px;
+	}
+	.b-60 {
+		width: 80%;
+	}
+
+	/* header */
+	.header__navigation .btn {
+		margin-top: 10px;
+		margin-left: 20px;
+	}
+	.header__language {
+		margin-top: 5px;
+	}
+	.navbar__open {
+		margin: 10px 30px 0 0;
+	}
+	
+	/* slider */
+	.owl__slider__content {
+		margin: 180px 0px;
+	}
+	.owl__slider__content .description {
+		font-size: 15px;
+	}
+	
+	/* company */
+	.advantage__title {
+		margin: 10px 0;
+	}
+
+	/* etaps */
+	.stages__coop li {
+		width: 150px;
+	}
+	.stages__coop li span {
+		font-size: 15px;
+		width: 26px;
+		height: 26px;
+		left: 10px;
+		line-height: 26px;
+	}
+	.stages__coop li strong {
+		font-size: 14px;
+	}
+	.stages__coop ul.line__twoo {
+		margin-left: 0px;
+	}
+
+	/* footer */
+	.sm-center {
+		text-align: center;
+	}
 
 }
 
 @media (max-width:768px) and (min-width:600px) {
 
-}
-
-@media (max-width:599px) and (min-width:320px) and (orientation:portrait), (max-width:320px) and (orientation:portrait) {
-
-}
-
-@media (max-width:599px) and (min-width:320px) and (orientation:landscape) {
+	.padding__lr__40 {
+		padding: 40px 20px;
+	}
 	
-}
-@media (max-width:599px) and (min-width:320px) and (orientation:portrait), (max-width:320px) and (orientation:portrait) {
-    #cart-modal-form.reveal-modal, #checks.reveal-modal, #click.reveal-modal, #zvonok.reveal-modal {
-		width: 100%;
-		margin: 0;
-		left: 0;
+	.b-large {
+		padding: 14px 32px;
+		font-size: 14px;
 	}
-	#cart-modal-form .b-small {
-		font-size: 16px;
+	.b-60 {
+		width: 80%;
 	}
-	.title-form {
-		font-size: 20px;
+
+	/* header */
+	.header__navigation .btn {
+		margin-top: 10px;
+		margin-left: 20px;
 	}
-	.main-data {
+	.header__language {
+		margin-top: 5px;
+	}
+	.navbar__open {
+		margin: 10px 30px 0 0;
+	}
+
+	/* slider */
+	.owl__slider__wrapper {
+		height: 480px;
+		background-position: center;
+	}
+	.owl__slider__content {
+		margin: 140px 0px;
+	}
+	.owl__slider__content .title {
+		font-size: 1.4em;
+	}
+	.owl__slider__content .description {
 		font-size: 13px;
-		margin-bottom: 10px;
+		padding: 0;
 	}
-	.modal_table_element {
-		border-top: none;
-		border-bottom: none;
-		margin: 0;
-		padding: 0 25px 0 0;
+	.owl__slider__content .link > a {
+		margin: 0px 0 10px;
 	}
-	.personal-data {
-		font-size: 12px;
+
+	/* company */
+	.advantage__title {
+		margin: 0px 0 40px;
+	}
+
+	/* etaps */
+	.stages__coop li.arrow__right:before, .line__arrow:before, .stages__coop li.arrow__left:before, .stages__coop li.arrow__twoo:after {
+		content: initial;
+	}
+	.stages__coop ul {
+		direction: rtl;
+	}
+	.stages__coop ul.line__twoo {
+		margin-left: 0px;
+	}
+	.grew__backround  .footer__social {
+		padding: 20px 0;
+	}
+
+	/* footer */
+	.sm-center, .xs-center {
+		text-align: center;
+	}
+
+}
+
+@media (max-width:599px) and (min-width:320px) and (orientation:portrait), (max-width:320px) and (orientation:portrait), (max-width:320px) and (orientation:landscape) {
+
+	.padding__lr__40 {
+		padding: 40px 20px;
+	}
+	
+	.b-large {
+		padding: 14px 32px;
+		font-size: 14px;
+	}
+	.b-60 {
+		width: 80%;
+	}
+
+	/* header contacts */
+	.header__contacts {
+		width: 100%;
+		text-align: center;
+	}
+	.header__contacts li {
+		display: block;
+		font-size: 14px;
+		margin: 0 0 5px;
+	}
+	.header__contacts .btn {
+		width: 100%;
+	}
+
+	/* header */
+	.navigation {
+		float: left;
+	}
+	.navbar__open {
+		margin: 4px 0px 0 0;
+		padding: 20px 40px 20px 10px;
+	}
+	.navbar__open i {
+		display: none
+	}
+	.header__language {
+		margin-top: 0;
+	}
+	.header__language li {
+		margin: 2px 0;
+	}
+
+	/* slider */
+	.owl__slider__wrapper {
+		height: 480px;
+		background-position: center;
+	}
+	.owl__slider__content {
+		margin: 140px 0px;
+	}
+	.owl__slider__content .title {
+		font-size: 1.4em;
+	}
+	.owl__slider__content .description {
+		font-size: 13px;
+		padding: 0;
+	}
+	.owl__slider__content .link > a {
+		margin: 0px 0 10px;
+	}
+
+	/* company */
+	.advantage__title {
+		margin: 0px 0 40px;
+	}
+
+	/* etaps */
+	.stages__coop li.arrow__right:before, .line__arrow:before, .stages__coop li.arrow__left:before, .stages__coop li.arrow__twoo:after {
+		content: initial;
+	}
+	.stages__coop ul {
+		direction: rtl;
+	}
+	.stages__coop ul.line__twoo {
+		margin-left: 0px;
+	}
+	.footer__social li:first-child {
+		display: block;
+   		margin-bottom: 10px;
+	}
+	.grew__backround  .footer__social {
+		padding: 20px 0;
+	}
+
+	/* footer */
+	.sm-center, .xs-center {
 		text-align: center;
 	}
 }
 
-@media (max-width:599px) and (min-width:320px) and (orientation:landscape) {
-    #cart-modal-form.reveal-modal, #checks.reveal-modal, #click.reveal-modal, #zvonok.reveal-modal {
+@media only screen and (max-width:599px) {
+
+    .reveal-modal {
 		width: 100%;
 		margin: 0;
 		left: 0;
 	}
-	#cart-modal-form .b-small {
-		font-size: 16px;
-	}
 	.title-form {
 		font-size: 20px;
 	}
-	.main-data {
-		font-size: 13px;
-		margin-bottom: 10px;
-	}
-	.modal_table_element {
-		border-top: none;
-		border-bottom: none;
-		margin: 0;
-		padding: 0 25px 0 0;
-	}
-	.personal-data {
+	.main-data, .personal-data {
 		font-size: 12px;
-		text-align: center;
-	}
-}
-
-@media (max-width:320px) and (orientation:portrait) {
-    #cart-modal-form.reveal-modal, #checks.reveal-modal, #click.reveal-modal, #zvonok.reveal-modal {
-		width: 100%;
-		margin: 0;
-		left: 0;
-	}
-	#cart-modal-form .b-small {
-		font-size: 16px;
-	}
-	.title-form {
-		font-size: 20px;
-	}
-	.main-data {
-		font-size: 13px;
-		margin-bottom: 10px;
-	}
-	.modal_table_element {
-		border-top: none;
-		border-bottom: none;
-		margin: 0;
-		padding: 0 25px 0 0;
-	}
-	.personal-data {
-		font-size: 12px;
-		text-align: center;
-	}
-}
-
-@media (max-width: 991px) and (min-width: 768px){
-	.fancybox-close {
-	position: absolute;
-    top: 0px;
-    right: 0px;
-    background: rgba(253, 253, 253, 0.85);
-    font-size: 23px;
-    width: 35px;
-    height: 35px;
-    line-height: 33px;
-    text-align: center;
-    color: #464646;
-	}
-	.fancybox-close:hover {
-    background-color: #bf251b;
-    color: #fff;
-	}
-	.fancybox-nav {
-	position: absolute;
-	top: 0px;
-	width: 80%;
-	height: initial;
-	}
-	.fancybox-nav span {
-	position: absolute;
-	top: 0px;
-	margin-top:0px;
-	cursor: pointer;
-	z-index: 8040;
-	text-align: center;
-	color: #fff;
-	padding: 0px;
-	font-size: 14px;
-	width: 35px;
-	height: 35px;
-	line-height: 38px;
-	text-align: center;
-	left: 0px;
-	}
-	.fancybox-prev {
-	left: 0px;
-	}
-	.fancybox-next {
-	left: 40px;
-	}
-	.fancybox-image, .fancybox-iframe {
-    border-radius: 0px;
-	}
-	.fancybox-next span {
-	right: 0px;
-    border-radius: 0px;
-	line-height: 36px;
-	}
-	.fancybox-prev span {
-	left: 0px;
-    border-radius: 0px;
-	line-height: 36px;
-	}
-}
-@media (max-width: 767px) and (min-width: 600px) {
-	.fancybox-close {
-	position: absolute;
-    top: 0px;
-    right: 0px;
-    background: rgba(253, 253, 253, 0.85);
-    font-size: 23px;
-    width: 35px;
-    height: 35px;
-    line-height: 33px;
-    text-align: center;
-    color: #464646;
-	}
-	.fancybox-close:hover {
-    background-color: #bf251b;
-    color: #fff;
-	}
-	.fancybox-nav {
-	position: absolute;
-	top: 0px;
-	width: 80%;
-	height: initial;
-	}
-	.fancybox-nav span {
-	position: absolute;
-	top: 0px;
-	margin-top:0px;
-	cursor: pointer;
-	z-index: 8040;
-	text-align: center;
-	color: #fff;
-	padding: 0px;
-	font-size: 14px;
-	width: 35px;
-	height: 35px;
-	line-height: 38px;
-	text-align: center;
-	left: 0px;
-	}
-	.fancybox-prev {
-	left: 0px;
-	}
-	.fancybox-next {
-	left: 40px;
-	}
-	.fancybox-image, .fancybox-iframe {
-    border-radius: 0px;
-	}
-	.fancybox-next span {
-	right: 0px;
-    border-radius: 0px;
-	line-height: 36px;
-	}
-	.fancybox-prev span {
-	left: 0px;
-    border-radius: 0px;
-	line-height: 36px;
-	}
-}
-@media (max-width: 599px) and (min-width: 320px) and (orientation:portrait), (max-width: 320px) and (orientation:portrait) {
-	.fancybox-close {
-	position: absolute;
-    top: 0px;
-    right: 0px;
-    background: rgba(253, 253, 253, 0.85);
-    font-size: 23px;
-    width: 35px;
-    height: 35px;
-    line-height: 33px;
-    text-align: center;
-    color: #464646;
-	}
-	.fancybox-close:hover {
-    background-color: #bf251b;
-    color: #fff;
-	}
-	.fancybox-nav {
-	position: absolute;
-	top: 0px;
-	width: 80%;
-	height: initial;
-	}
-	.fancybox-nav span {
-	position: absolute;
-	top: 0px;
-	margin-top:0px;
-	cursor: pointer;
-	z-index: 8040;
-	text-align: center;
-	color: #fff;
-	padding: 0px;
-	font-size: 14px;
-	width: 35px;
-	height: 35px;
-	line-height: 38px;
-	text-align: center;
-	left: 0px;
-	}
-	.fancybox-prev {
-	left: 0px;
-	}
-	.fancybox-next {
-	left: 40px;
-	}
-	.fancybox-image, .fancybox-iframe {
-    border-radius: 0px;
-	}
-	.fancybox-next span {
-	right: 0px;
-    border-radius: 0px;
-	line-height: 36px;
-	}
-	.fancybox-prev span {
-	left: 0px;
-    border-radius: 0px;
-	line-height: 36px;
 	}
 }
