--- a/app/template/_services.html
+++ b/app/template/_services.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".9s" data-wow-delay=".2s">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".9s" data-wow-delay=".2s">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
 							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_11.svg">
@@ -23,11 +23,10 @@
 							<a href="/">Частные солнечные электростанции</a>
 						</div>  
 						<p>Строительство солнечных электростанций для дома или дачи</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 center">
-					<div class="col__services border">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 center">
+					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
 							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_21.svg">
 						</a>
@@ -35,10 +34,9 @@
 							<a href="/">Коммерческие солнечные электростанции</a>
 						</div>  
 						<p>Строительство электростанций для бизнеса и предприятий</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInRightBig center" data-wow-duration=".9s" data-wow-delay=".2s">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 wow fadeInRightBig center" data-wow-duration=".9s" data-wow-delay=".2s">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
 							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_31.svg">
@@ -47,15 +45,11 @@
 							<a href="/">Автономное и резервное электроснабжение</a>
 						</div>  
 						<p>Системы автономного  и резервного электроснабжения</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
 					</div>
 				</div>
 			</div>
-			
-			<div class="line__stripped"></div>
-			
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="200">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="120">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
 							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_41.svg">
@@ -64,11 +58,10 @@
 							<a href="/">«Зеленый» тариф</a>
 						</div>  
 						<p>Гарантированно оформим договор «Зеленого» тарифа</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeIn center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="180">
-					<div class="col__services border">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 wow fadeIn center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="180">
+					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
 							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_51.svg">
 						</a>
@@ -76,10 +69,9 @@
 							<a href="/">Электромонтажные работы</a>
 						</div>  
 						<p>Полный спектр услуг сфере электроснабжения и электромонтажа </p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInRightBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="200">
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 wow fadeInRightBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="120">
 					<div class="col__services">
 						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
 							<img alt="Солнечные электростанции: компания «Maxisolar»" src="/images/serv_61.svg">
@@ -88,7 +80,6 @@
 							<a href="/">Гарантия и сервис</a>
 						</div>  
 						<p>Предоставим полное гарантийное и сервисное обслуживание</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
 					</div>
 				</div>
 			</div>
